[tool.poetry]
name = "sap2000"
version = "0.1.0"
description = "sap200 python integration"
authors = ["mv1742 <mv1742@nyu.edu>"]

[tool.poetry.dependencies]
python = "^3.5"
jupyter = "*"
pythonnet = "^2.5.2"
matplotlib = "*"
openpyxl = "*"
pandas = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
